Updating java docs
Signed-off-by: ns-dell <navdeep.sood@dell.com>